// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extpfeil Newextarrow 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\Newextarrow{\\ab}{10,20}{8672}\\ab{xyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\Newextarrow{\\ab}{10,20}{8672}\\ab{xyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD">&#x21E0;</mo>
      <mpadded width="+1.667em" lspace="0.556em" voffset="-.2em" height="-.2em">
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;

exports[`Extpfeil Xlongequal 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\xlongequal{abcxyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\xlongequal{abcxyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD" stretchy="true">=</mo>
      <mpadded width="+0.778em" lspace="0.389em" voffset="-.2em" height="-.2em">
        <mi data-latex="a">a</mi>
        <mi data-latex="b">b</mi>
        <mi data-latex="c">c</mi>
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;

exports[`Extpfeil Xmapsto 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\xmapsto{abcxyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\xmapsto{abcxyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD">&#x21A6;</mo>
      <mpadded width="+0.722em" lspace="0.333em" voffset="-.2em" height="-.2em">
        <mi data-latex="a">a</mi>
        <mi data-latex="b">b</mi>
        <mi data-latex="c">c</mi>
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;

exports[`Extpfeil Xtofrom 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\xtofrom{abcxyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\xtofrom{abcxyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD">&#x21C4;</mo>
      <mpadded width="+1.333em" lspace="0.667em" voffset="-.2em" height="-.2em">
        <mi data-latex="a">a</mi>
        <mi data-latex="b">b</mi>
        <mi data-latex="c">c</mi>
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;

exports[`Extpfeil Xtwoheadleftarrow 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\xtwoheadleftarrow{abcxyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\xtwoheadleftarrow{abcxyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD">&#x219E;</mo>
      <mpadded width="+1.667em" lspace="0.944em" voffset="-.2em" height="-.2em">
        <mi data-latex="a">a</mi>
        <mi data-latex="b">b</mi>
        <mi data-latex="c">c</mi>
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;

exports[`Extpfeil Xtwoheadrightarrow 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\xtwoheadrightarrow{abcxyz}" display="block">
  <mrow data-mjx-texclass="REL" data-latex="\\xtwoheadrightarrow{abcxyz}">
    <mrow data-mjx-texclass="NONE"></mrow>
    <mover>
      <mo data-mjx-texclass="ORD">&#x21A0;</mo>
      <mpadded width="+1.556em" lspace="0.667em" voffset="-.2em" height="-.2em">
        <mi data-latex="a">a</mi>
        <mi data-latex="b">b</mi>
        <mi data-latex="c">c</mi>
        <mi data-latex="x">x</mi>
        <mi data-latex="y">y</mi>
        <mi data-latex="z">z</mi>
        <mspace depth=".2em"></mspace>
      </mpadded>
    </mover>
  </mrow>
</math>"
`;
